# antfs-poc-defcon24

./: README.md
cfp-application/: help-ive-got-ants-OUTLINE.txt  help-ive-got-ants-UPDATES.txt
firmware/: firmware.py  fixcrc.py
hackant/: hackant.py
patch/: ant_fs_manager.py.diff  antfs_client_channel.cpp.diff
sniff/: anteater.py  antfs1-annotated.txt  antfs2-annotated.txt  packets.h  shockburst.c
sniff/pothos/: ant-sdr.pth
sniff/pothos/ANTFSDecoder/: ANTFSDecoder.cpp  CMakeLists.txt
sniff/pothos/ShockBurstDecoder/: CMakeLists.txt  ShockBurstDecoder.cpp  ShockBurstUtils.hpp
